src/objects/Customer_Satisfaction__c.object
<CustomObject>
    <description>This object stores the feedback from partner on different pilot/ experiment projects.</description>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>Partner who provided feedback/participated in experiment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Satisfactions</relationshipLabel>
        <relationshipName>Customer_Satisfactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Feedback/Experiment Category</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Pricing Experiment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLP + Subscriptions</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Feedback__c</fullName>
        <inlineHelpText>Date when feedback was provided</inlineHelpText>
        <label>Date of Feedback</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discussed_the_pilot_survey_with_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are the pilot/experiment/survey details discussed with the partner?</inlineHelpText>
        <label>Discussed the pilot/survey with partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>End Date for Pilot/Survey project</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <inlineHelpText>Feedback provided by partner/customer</inlineHelpText>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invited_to_Participate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the customer/partner invited to participate in the survey/experiment?</inlineHelpText>
        <label>Invited to Participate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <inlineHelpText>The survey/experiment conducted during which quarter of the year?</inlineHelpText>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reaction__c</fullName>
        <inlineHelpText>Level of reaction from partner.</inlineHelpText>
        <label>Reaction</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_to_Participate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is partner ready to participate in the pilot/survey?</inlineHelpText>
        <label>Ready to Participate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Start date for the pilot/survey project</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Feedback_Experiment__c</fullName>
        <inlineHelpText>Year when the pilot/experiment is conducted</inlineHelpText>
        <label>Year of Feedback/Experiment</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Satisfaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSAT-{000000}</displayFormat>
        <label>CSAT Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Satisfactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>